--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "redux": "^3.6.0",
     "redux-act": "^1.1.0",
     "redux-actions": "^1.2.0",
+    "redux-candy": "^0.0.3",
     "redux-devtools": "^3.3.1",
     "redux-devtools-dock-monitor": "^1.1.1",
     "redux-devtools-log-monitor": "^1.1.1",
@@ -27,6 +28,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "deploy": "npm run build&&gh-pages -d build"
-
   }
 }
